--- a/apps/client/src/features/rundown/time-input-flow/TimeInputFlow.module.scss
+++ b/apps/client/src/features/rundown/time-input-flow/TimeInputFlow.module.scss
@@ -4,8 +4,13 @@
 
 .timerNote {
   width: 1.25em;
+  flex: 0 0 1.25em;
   color: $blue-500;
   font-size: 1.5em;
+}
+
+.timerNotePlaceholder {
+  visibility: hidden;
 }
 
 .inactive {
